--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.5
+  google_fonts: ^4.0.0
+  shared_preferences: ^2.0.15
+
 
 dev_dependencies:
   flutter_test:
@@ -18,6 +22,19 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/fonts/Roboto-Regular.ttf
+    - assets/fonts/Roboto-Bold.ttf
+    - assets/images/ # Thêm thư mục chứa hình ảnh (nếu có)
+
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
+        - asset: assets/fonts/Roboto-Bold.ttf
+          weight: 700
+
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
